# the-handbook

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  biome.json  compose.yaml  context7.json  mkdocs.yml  nav.yml  package.json  pyproject.toml  requirements.txt  run-pm2-development.json  run-pm2-production.json  run-pm2-stage.json  run-pm2-staging.json  run.sh  team-diagram.drawio  wrangler.jsonc
.claude/: settings.json
.claude/commands/: lint-markdown.md
.github/: CODEOWNERS  workflow.yml  workflows.yml
.github/scripts/: notify.sh
.github/workflows/: ci-cd.yml  ci.yml  create-releases.yml  deploy-production.yml  deploy-version.yml  deploy.yml  deploy.yml.backup  development.yml  documentation.yml  handbook-vector-indexer.yml  main.yml  production.yml  release-production.yml  release.yml  release.yml.backup  releases.yml  stage copy.yml  stage.yml  staging.yml  summary-updater-webhook.yml  trigger-indexing.yml  trigger-indexing.yml.wip  trigger-summary-webhook.yml
.husky/: pre-commit  prepare-commit-msg
.obsidian/: workspace.json
_backup/_insights/: business-digital-evolution.md  servicio.md  talk-is-cheap-show-me-the-code.md  team-autonomy-through-service-apis.md
_handbook-docs/: Makefile  mkdocs.yml
_handbook-docs/scripts/: bootstrap  run-chatbot
_handbook-docs/site/: sitemap.xml
_insights/: ai-as-professional-capabilities-multiplier.md  business-digital-evolution.md  calidad-servicio.md  conceptos-organizacionales.md  dev10x.md  ia-como-conector-humano-con-sistemas.md  index.md  la-experiencia-profesional.md  mision.md  recursion-as-a-good-predictor-for-developers.md  relacion-entre-srm-sdm.md  servicio.md  talk-is-cheap-show-me-the-code.md  team-autonomy-through-service-apis.md
_overrides/: base.bk.html  home.bk.html  home.html  main.html
_overrides/partials/: content.html  path.html  tabs.html
cf-workers/: README.md  package-lock.json  package.json
cf-workers/docs-loader/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  worker-configuration.d.ts  wrangler.toml
cf-workers/knowledge-upserter/: README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
cf-workers/shared/: index.ts  package.json  tsconfig.json
deploy/: nginx.development.conf  nginx.staging.conf
docs/: Makefile  get-started.md  index.md  llms.md  mkdocs.yml  pyproject.toml  requirements.txt  telos.md
docs/_extra/: index.md  index2.md  team-diagram.drawio
docs/about-us/: history.md  index.md  integracion-industria.md  integration.md  nuestra-organizacion.md  nuestras-metas.md  nuestros-kpis.md  nuestros-servicios.md  nuestros-valores.md  our-goals.md  our-organization.md  our-services.md  our-values.md  resumen.md
docs/careers/: index.md  process-preparation.md  recruitment-process.md
docs/community/: index.md  spotify-playlist.md
docs/company/: acerca-de-23people.md  kpis-de-23people.md
docs/culture/: index.md  values.md
docs/departments/: index.md
handbook-docs/: .markdownlint.yaml
handbook-indexer/: LICENSE  package.json
llm-resources/: generation-system-prompt.md  handbook-summary.md  query-system-prompt.md  system-prompt.md
overrides/: main.html
script/: bootstrap  cibuild  run  setup  version
scripts/: build.sh  bump-version.sh  claude.sh  date-updater.sh  deploy.py  git.sh  main.py  new-version.sh  reindex.sh  run  setup  start.sh  version
site/: 404.html  index.html  sitemap.xml
src/docs/: LICENSE  (+1 more)
templates/: YYYYMMDD handbook-article-template.md  handbook-article-template.md
vector-indexer/: package-lock.json  package.json  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.toml
vector-store/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.toml
website/: material-mkdocs-site.mhtml
workers/: package-lock.json
(+1468 files in other folders)
