[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "23p-handbook"
# Using dev0 to comply with PEP 440, actual versioning handled by semantic release
version = "0.0.0.dev0"
description = "The 23people's Public Company Handbook"
readme = "README.md"
authors = [{name = "mreyes23p", email = "manuel@23people.io"}]
maintainers = [
  {name = "Manuel Reyes", email = "manuel@23people.io"},
  {name = "Marcelo Ampuero", email = "marcelo@23people.io"},
]
requires-python = "===3.11.11"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-git-committers-plugin-2>=2.4.1",
  "mkdocs-git-revision-date-localized-plugin>=1.2.7",
  "mkdocs-material>=9.5.34",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-redirects>=1.2.1",
  "mkdocs-version-annotations>=1.0.0",
  "mkdocstrings>=0.25.2",
  "mkdocstrings-python>=1.10.9",
  "python-dotenv>=1.0.1",
  "pymdown-extensions>=10.6",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.4",
    "pre-commit<5.0.0,>=4.1.0",
    "ruff<1.0.0,>=0.11.2",
    "pytest-mock<4.0.0,>=3.14.0",
    "deadcode>=2.3",
    "commitizen>=4.7.2",
]

[project.scripts]
start = "scripts.main:start"
commit = "scripts.main:commit"

[tool.pyright]
defineConstant = {DEBUG = true}
exclude = [
  "**/.venv",
  "**/__pycache__",
]
include = ["src"]
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.semantic_release]


